k8s-dev/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
# the deployment specification
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  # the pod template
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: codihuston/multi-docker-client
          ports:
            - containerPort: 3000
