k8s-dev/server-deployment-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  # target the server deployment
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 5000
