k8s-dev/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE THIS LINE ABOVE
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  # tls:
  #   - hosts:
  #       - codihuston.dev
  #       - www.codihuston.dev
  #     # the name that the cert was stored in
  #     secretName: codihuston-dev
  rules:
    # - host: codihuston.dev
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
    # - host: www.codihuston.dev
    #   http:
    #     paths:
    #       - path: /?(.*)
    #         backend:
    #           serviceName: client-cluster-ip-service
    #           servicePort: 3000
    #       - path: /api/?(.*)
    #         backend:
    #           serviceName: server-cluster-ip-service
    #           servicePort: 5000
